feat(controllers): Add resources controllers.

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=node_refactor
+DB_NAME=minka
 DB_USER=postgres
 DB_PASSWORD=postgres
-JWT_SECRET=cL4v3Pr1v4D4
+JWT_SECRET=jwts3cr3t
 DB_DIALECT=postgres
+ENCRYPTION_KEY=s0m3v3rys3cr3tpr1v4t3k3y
