--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/cors": "^2.8.13",
     "@typescript-eslint/parser": "^5.59.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
