--- a/.env.test
+++ b/.env.test
@@ -5,4 +5,5 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 JWT_SECRET=jwts3cr3t
 DB_DIALECT=postgres
-ENCRYPTION_KEY=s0m3v3rys3cr3tpr1v4t3k3y
+ENCRYPTION_KEY=U8jfiEOOUdecCWp6tMlADRYEcM1nXbW2
+PORT=9090
