--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -3,8 +3,9 @@
     "username": "postgres",
     "password": "postgres",
     "database": "minka",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "host": "db",
+    "dialect": "postgres",
+    "port": 5432
   },
   "test": {
     "username": "postgres",
