--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "npm run prettier-fix && eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "start": "nodemon ./src/server/index.ts",
+    "test:unit": "jest test --i -c jest.unit.config.js --detectOpenHandles",
+    "test:integration": "jest test --i -c jest.integration.config.js --detectOpenHandles",
+    "test:all": "npm run test:unit && npm run test:integration",
     "docker:start": "cross-env NODE_ENV=test nodemon index.ts",
     "db:create": "cd ./src/db && npx sequelize-cli db:create && cd ../..",
     "db:migrate": "cd ./src/db && npx sequelize-cli db:migrate && cd ../..",
@@ -44,6 +47,7 @@
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.1",
     "@typescript-eslint/parser": "^5.59.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
@@ -53,6 +57,7 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   }
