--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "minka_challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-fix": "prettier --write \"**/*.ts\"",
     "lint": "npm run prettier-fix && eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix",
     "start": "nodemon ./src/server/index.ts",
-    "test:unit": "jest test --i -c jest.unit.config.js --detectOpenHandles",
-    "test:integration": "jest test --i -c jest.integration.config.js --detectOpenHandles",
-    "test:all": "npm run test:unit && npm run test:integration",
-    "docker:start": "cross-env NODE_ENV=test nodemon index.ts",
+    "test:integration": "jest test --silent --i -c jest.integration.config.js --detectOpenHandles",
+    "test": "npm run test:integration",
+    "start:dev": "nodemon index.ts",
     "db:create": "cd ./src/db && npx sequelize-cli db:create && cd ../..",
+    "db:create:test": "cd ./src/db && npx sequelize-cli db:create --env test && cd ../..",
     "db:migrate": "cd ./src/db && npx sequelize-cli db:migrate && cd ../..",
+    "db:migrate:test": "cd ./src/db && npx sequelize-cli db:migrate --env test && cd ../..",
     "db:seed": "cd ./src/db && npx sequelize-cli db:seed:all && cd ../..",
+    "db:seed:test": "cd ./src/db && npx sequelize-cli db:seed:all --env test && cd ../..",
     "db:create:all": "npm run db:migrate && npm run db:seed",
+    "db:create:all:test": "npm run db:create:test && npm run db:migrate:test && npm run db:seed:test",
     "docker:start:dev": "docker-compose up -d && docker exec -it minka-api bash",
     "script:password": "ts-node ./scripts/password/generate.ts"
   },
@@ -48,6 +50,7 @@
     "@tsconfig/node16": "^1.0.3",
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/parser": "^5.59.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
